# simple-date-parsing

./: README.md  simple-date-parsing.cabal
src/Data/Date/: SimpleParse.hs
src/Data/Date/SimpleParse/: Internal.hs
test/Data/Date/: SimpleParseSpec.hs
